main: fix (discography) - Added inline padding for better spacing in grid layout on mobile devices

--- a/atarashii-gakko/src/styles/components/_discography.scss
+++ b/atarashii-gakko/src/styles/components/_discography.scss
@@ -72,6 +72,7 @@
     grid-template-columns: 1fr;
     gap: 2.5rem;
     margin: 1rem auto 0;
+    padding-inline: 0.3rem;
   }
 }
 
